<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correct_answers_streak_counter">0</string>
    <string name="quiz_app">QuizApp</string>
    <string name="quiz">Quiz</string>
    <string name="next_question">Next Question</string>
    <string name="submit_answer">Submit answer</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="geography">Geography</string>
    <string name="music">Music</string>
    <string name="general_knowledge">General knowledge</string>
    <string name="books">Books</string>
    <string name="films">Films</string>
    <string name="musicals_and_theatres">Musicals and theatres</string>
    <string name="television">Television</string>
    <string name="video_games">Video games</string>
    <string name="board_games">Board games</string>
    <string name="science_and_nature">Science and nature</string>
    <string name="mathematics">Mathematics</string>
    <string name="mythology">Mythology</string>
    <string name="computers">Computers</string>
    <string name="sports">Sports</string>
    <string name="history">History</string>
    <string name="politics">Politics</string>
    <string name="art">Art</string>
    <string name="celebrities">Celebrities</string>
    <string name="animals">Animals</string>
    <string name="vehicles">Vehicles</string>
    <string name="comics">Comics</string>
    <string name="gadgets">Gadgets</string>
    <string name="japanese_anime_and_manga">Japanese Anime and Manga</string>
    <string name="cartoon_and_animations">Cartoon and animations</string>
    <string name="date">Date:  </string>
    <string name="score">Score:  </string>
</resources>